Update job title from 'Backend Developer and Mobile Development' to 'Software Engineer'

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Section from "../components/Section.astro";
         />
       </div>
       <div class="flex justify-center text-yellow-200 mb-2">
-        <span class="border rounded-md px-2 py-1 text-1xl">Backend Developer and Mobile Development</span> 
+        <span class="border rounded-md px-2 py-1 text-1xl">Software Engineer</span> 
       </div>
       <h1
         class="text-4xl font-bold flex justify-center pb-6 md:text-5xl lg:pb-10"
